--- a/style.css
+++ b/style.css
@@ -1270,6 +1270,15 @@ select option {
 
 
 
+
+
+
+
+
+
+
+
+
 /* reference areas */
 .faq-image {
   max-width: 140px;
@@ -1303,11 +1312,47 @@ select option {
 .faq-answer {
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.4s ease-in-out, padding 0.4s ease-in-out;
+  transition: max-height 0.2s ease-in-out, padding 0.2s ease-in-out;
   padding-top: 0;
 }
 
 .faq-answer.active {
   max-height: 200px;
   padding-top: 15px;
+}
+
+
+@media (min-width: 780px) {
+  .faq-contents {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+  }
+  .faq-qn {
+    max-width: 600px;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-self: center;
+    margin-top: 40px;
+  }
+}
+@media (min-width: 1100px) {
+  .faq-contents {
+    display: flex;
+    gap: 30px;
+    flex-direction: row;
+  }
+  .faq-image-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 4px solid grey;
+  }
+  .faq-image {
+    max-width: 300px;
+  }
 }
