--- a/style.css
+++ b/style.css
@@ -1244,7 +1244,6 @@ select option {
   }
 }
 
-
 /* //////////// */
 /* FAQ  Section */
 /* //////////// */
@@ -1278,24 +1277,7 @@ select option {
   text-align: left;
 }
 
-
-
-
-
-
-/* reference areas */
-.faq-image {
-  max-width: 250px;
-  transition: all 0.4s ease-in-out;
-}
-.faq-image:hover {
-  transform: scale(1.05);
-}
-
-
-
-
-
+/* question and answers */
 .faq-question {
   background-color: transparent;
   border: none;
@@ -1324,15 +1306,35 @@ select option {
   max-height: 200px;
   padding-top: 15px;
 }
+.faq-item p {
+  color: #333;
+  font-size: 15px;
+  line-height: 25px;
+}
 
+/* faq-image */
+.faq-image-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 40px;
+}
+.faq-image {
+  max-width: 250px;
+  transition: all 0.4s ease-in-out;
+}
+.faq-image:hover {
+  transform: scale(1.05);
+}
 
+/* faq-page responsiveness */
+/* tablet screen */
 @media (min-width: 780px) {
   .faq-contents {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 50px;
   }
   .faq-qn {
     max-width: 600px;
@@ -1343,20 +1345,28 @@ select option {
     margin-top: 40px;
   }
 }
+/* bigger screens */
 @media (min-width: 1100px) {
   .faq-contents {
     display: flex;
-    gap: 30px;
     flex-direction: row;
+    gap: 50px;
+  }
+  .faq-item {
+    padding: 30px;
+  }
+  .faq-qn {
+    max-width: 900px;
   }
   .faq-image-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 4px solid grey;
   }
   .faq-image {
     max-width: 300px;
   }
 }
+
+/* reference areas */
