--- a/style.css
+++ b/style.css
@@ -1386,9 +1386,9 @@ select option {
 }
 
 /* //////////////// */
-/* Footer / Section */
+/* c / Section */
 /* //////////////// */
-footer {
+.conclusion {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1396,7 +1396,7 @@ footer {
   background-color: #341756;
 }
 
-.footer-image-container {
+.conc-image-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1409,8 +1409,4 @@ footer {
 }
 .footer-logo:hover {
   transform: scale(1.03);
-}
-
-.loc1-title {
-  color: white;
 }
