--- a/style.css
+++ b/style.css
@@ -1389,19 +1389,51 @@ select option {
 /* Conclusion Section */
 /* //////////////////*/
 .conclusion {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 0;
   background-color: #381559;
 }
 
 .conclusion-logo {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin: 40px;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid wheat;
+  margin: 30px 0 0 0;
 }
 
 
 
 /* reference areas */
 .conc-logo {
-  max-width: 200px;
+  max-width: 180px;
+}
+
+.location1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  line-height: 25px;
+  background-color: green;
+  margin-top: 20px;
+}
+
+.location1 p {
+  color: white;
+  font-size: 16px;
+}
+
+.location1 i {
+  color: #eba328;
+}
+
+
+
+@media (min-width: 900px) {
+  .location1 {
+    max-width: 600px;
+  }
 }
