conclusion section quick links, courses, and socials final draft

--- a/style.css
+++ b/style.css
@@ -1400,8 +1400,6 @@ select option {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* reference */
-  background-color: #030336;
 }
 
 .conc-logo {
@@ -1476,28 +1474,74 @@ select option {
   margin: 30px 0;
 }
 
-
-
 /* quick links, courses, social links */
 .conclusion-details,
 .quick-links,
 .courses,
 .socials {
+  line-height: 40px;
   text-align: center;
 }
 
 .details-heading {
   font-size: 25px;
   font-weight: 600;
-  color: #e7e7e7;
+  color: #ffffff;
 }
 
+.quick-links ul,
+.courses ul {
+  color: white;
+  list-style: none;
+}
 
+.courses,
+.socials {
+  margin: 30px 0;
+}
 
+.sc-in-div {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
 
-
-/* reference */
 .socials i {
   font-size: 25px;
-  color: wheat;
+  color: #ffffff;
+  transition: all 0.2s ease-in-out;
+}
+.socials i:hover {
+  cursor: pointer;
+  transform: scale(1.5);
+}
+
+.social-icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 10px;
+}
+
+@media (min-width: 1000px) {
+  .conclusion-details {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 70px;
+    justify-content: space-around;
+  }
+
+  .courses,
+  .socials {
+    margin: 0;
+  }
+
+  .sc-in-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
 }
