--- a/style.css
+++ b/style.css
@@ -1392,7 +1392,7 @@ select option {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 40px 0;
+  padding: 40px 0 20px 0;
   background-color: #381559;
 }
 
@@ -1529,8 +1529,8 @@ select option {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    gap: 70px;
-    justify-content: space-around;
+    gap: 90px;
+    justify-content: space-evenly;
   }
 
   .courses,
@@ -1544,4 +1544,16 @@ select option {
     align-items: center;
     gap: 10px;
   }
+}
+
+
+/* //////////////////*/
+/* Copyright section */
+/* ///////////////// */
+.copyright {
+  text-align: center;
+  padding: 15px 10px;
+  font-size: 14px;
+  color: white;
+  background-color: #321456;
 }
